--- a/Rps.Domain.Tests/Rps.Domain.Tests.csproj
+++ b/Rps.Domain.Tests/Rps.Domain.Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Helper\Enumerable.cs" />
     <Compile Include="PlayerTests.cs" />
     <Compile Include="BoundsTests.cs" />
+    <Compile Include="GameMoveTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameBoardTests.cs" />
     <Compile Include="GameRepositoryTests.cs" />
