Better handling of computer platyer in front end

--- a/Rps.Web/Rps.Web.csproj
+++ b/Rps.Web/Rps.Web.csproj
@@ -208,6 +208,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\ComputerGameMoveController.cs" />
     <Compile Include="Api\GameMoveController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
